# circpy

./: Justfile  README.md  pyproject.toml
circpy/: __main__.py  _pathlib.py  junk_drawer.py
circpy/cli/: __init__.py  _top.py  pull.py  push.py  wifi.py
circpy/vfs/: __init__.py  _base.py  web.py
